--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 								<li><a href="https://www.dropbox.com/sh/08man8al1d0vsyl/AAAUkDcKUL_qSQFsCQ8XVpWya?dl=0">DropBox</a></li>
 								<li><a href="https://yadi.sk/d/vzzKnnG83JJa4M">Yadi.sk</a></li>
 							</ul>
-                            <a href="index.html#overview" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
+                            <a href="index.html#fichi" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
                         </div>
                     </div><!-- Col ends -->
                     <div class="col s12 m5 l4 offset-l1 wow zoomIn" data-wow-delay="0.2s">
