--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <!-- Replace 'href' attribute with the download link  -->
 							<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Скачать</a>
 							<ul id='dropdown1' class='dropdown-content'>
-								<li><a href="https://www.dropbox.com/sh/08man8al1d0vsyl/AAAUkDcKUL_qSQFsCQ8XVpWya?dl=0">DropBox</a></li>
+								<li><a href="https://www.dropbox.com/s/9f83xa8k8ufgsd6/Kate.apk?dl=1">APK</a></li>
 								<li><a href="https://yadi.sk/d/vzzKnnG83JJa4M">Yadi.sk</a></li>
 							</ul>
                             <a href="index.html#fichi" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
