--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                             <!-- Replace 'href' attribute with the download link  -->
 							<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Скачать</a>
 							<ul id='dropdown1' class='dropdown-content'>
-								<li><a href="https://www.dropbox.com/s/9f83xa8k8ufgsd6/Kate.apk?dl=1">APK</a></li>
-								<li><a href="https://yadi.sk/d/vzzKnnG83JJa4M">Yadi.sk</a></li>
+								<li><a href="https://www.dropbox.com/s/9f83xa8k8ufgsd6/Kate%20MoDile%2040.apk?dl=1">Kate 40</a></li>
+								<li><a href="https://www.dropbox.com/s/kkbmx0qnprb0a88/Kate%20MoDile%2040.4.apk?dl=1">Kate 40.4</a></li>
 							</ul>
                             <a href="index.html#fichi" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
                         </div>
