--- a/index.html
+++ b/index.html
@@ -87,15 +87,8 @@
                             <!-- Replace 'href' attribute with the download link  -->
 							<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Скачать</a>
 							<ul id='dropdown1' class='dropdown-content'>
-								<a class='dropdown-button btn' href='#' data-activates='dropdown2'>Stable</a>
-								<a class='dropdown-button btn' href='#' data-activates='dropdown3'>Beta</a>
-							</ul>
-							<ul id='dropdown2' class='dropdown-content'>
 								<li><a href="https://www.dropbox.com/s/9f83xa8k8ufgsd6/Kate%20MoDile%2040.apk?dl=1">Kate 40</a></li>
-								<li><a href="https://www.dropbox.com/s/z5ejdbit2dkek4u/Kate%20MoDile%2040.4.apk?dl=1">Kate 40.4</a></li>
-							</ul>
-							<ul id='dropdown3' class='dropdown-content'>
-								<li><a href="https://www.dropbox.com/s/x2dy4nx7utgp52f/Kate%20MoDile%2040.4%20BB.apk?dl=1">Kate 40.4 B</a></li>
+								<li><a href="https://www.dropbox.com/s/z5ejdbit2dkek4u/Kate%20MoDile%2040.4.apk?dl=1">Kate 40.4 B</a></li>
 							</ul>
                             <a href="index.html#fichi" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
                         </div>
