--- a/index.html
+++ b/index.html
@@ -85,17 +85,7 @@
 						Теперь вам доступна вся музыка, её кэш и идентификатор официального Android приложения</p>
                         <div class="download-button scroll-to">
                             <!-- Replace 'href' attribute with the download link  -->
-							<a class="waves-effect waves-light btn" href="#modal1">Modal</a>
-							<!-- Modal Structure -->
-  							<div id="modal1" class="modal bottom-sheet">
-    							  <div class="modal-content">
-      							   <h4>Modal Header</h4>
-      							   <p>A bunch of text</p>
-   							  </div>
-    							  <div class="modal-footer">
-      								<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    							  </div>
-  							</div>
+							<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Скачать</a>
 							<ul id='dropdown1' class='dropdown-content'>
 								<li><a href="https://www.dropbox.com/s/9f83xa8k8ufgsd6/Kate%20MoDile%2040.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 40', 3000, 'rounded')">Kate 40</a></li>
 								<li><a href="https://www.dropbox.com/s/z5ejdbit2dkek4u/Kate%20MoDile%2040.4.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 40.4', 3000, 'rounded')">Kate 40.4 B</a></li>
