--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
     <head>
 
@@ -26,7 +26,9 @@
         <meta name="application-name" content="Kate MoDile"/>
 
         <!-- Title -->
-        <title>Kate MoDile - Kate with music and cache</title> 
+        <title>Kate MoDile - Вся музыка и кэш</title>
+	<meta name="Description" content="Мод для популярного клиента ВК с кэшем и музыкой">
+	<meta name="keywords" content="kate modile, кейт с музыкой, кейт с кэшем, мод кейт, мод kate, mod kate, gabbhack">
 
     </head>
 
