--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                         <!-- Main navigation -->
                         <ul class="right main-nav">
                             <li><a class="waves-effect waves-light" href="index.html#fichi">Фичи</a></li>
-                            <li><a class="waves-effect waves-light" href="index.html#nfaq">NFaq</a></li>
+                            <li><a class="waves-effect waves-light" href="index.html#problems">Проблемы</a></li>
                             <li><a class="waves-effect waves-light" href="https://vk.com/gabbhack">Разраб</a></li>
                         </ul>
 
                         <!-- Mobile sidebar navigation -->
                         <ul class="side-nav" id="mobile-demo">
                             <li><a class="waves-effect waves-light" href="index.html#fichi">Фичи</a></li>
-                            <li><a class="waves-effect waves-light" href="index.html#nfaq">NFaq</a></li>
+                            <li><a class="waves-effect waves-light" href="index.html#problems">Проблемы</a></li>
                             <li><a class="waves-effect waves-light" href="https://vk.com/gabbhack">Разраб</a></li>
                         </ul>
                     </div><!-- Nav-wrapper ends -->
@@ -166,7 +166,7 @@
             </div><!-- Container ends -->
         </section><!-- Section ends -->
         <!-- Section faq -->
-        <section id="nfaq" class="faq-section sec-padded-1x z-depth-1">
+        <section id="problems" class="faq-section sec-padded-1x z-depth-1">
             <div class="container">
                 <div class="row">
                     <div class="col m5 l5 hide-on-small-only center">
@@ -174,26 +174,22 @@
                     </div>
                     <div class="col s12 m7 l7">
                         <div class="center-heading">
-                            <h3 class="white-text">NFAQ</h3>
+                            <h3 class="white-text">Проблемы</h3>
                             <span class="center-line red"></span>
-                            <p class="white-text">Нечасто задаваемые вопросы</p>
+                            <p class="white-text">Распространенные проблемы с модом</p>
                         </div>
                         <ul class="collapsible z-depth-2" data-collapsible="accordion">
                             <li>
-                                <div class="collapsible-header active"><i class="ion-android-more-vertical"></i>Ворует ли мод пароли?</div>
-                                <div class="collapsible-body"><p>Задайте такой же вопрос, предварительно поменяв слово мод на приложение, разработчикам Kate Mobile <br> Если конкретнее, то нет, мод не ворует ваши данные, нам это незачем <br> P.S. На самом деле я не знаю как это сделать</p></div>
+                                <div class="collapsible-header active"><i class="ion-android-more-vertical"></i>Проблема с музыкой или кэшем</div>
+                                <div class="collapsible-body"><p>При использовании мода вы можете обнаружить различные проблемы с музыкой и/или кэшем<br> Например у вас недоступна вся музыка, кэш от старой версии не сохранился, кэш от старой версии имеет пустые названия, невозможность сохранить в кэш и прочие <br> Такие проблемы возникают при установке мода поверх другой версии кейта или восстановлении бекапа. Рекомендуем вам удалить установленный кейт и установить мод начисто. Если проблема не решена напишите на почту ad@xakep.pw</p></div>
                             </li>
                             <li>
-                                <div class="collapsible-header"><i class="ion-android-more-vertical"></i>Второй вопрос</div>
-                                <div class="collapsible-body"><p>Опа, к нам оказывается нет больше вопросов.</p></div>
+                                <div class="collapsible-header"><i class="ion-android-more-vertical"></i>Не работают пуш уведомления</div>
+                                <div class="collapsible-body"><p>Корень данной проблема до конца не изучен, но есть версия что проблема в ID приложения авторизации. <br> В качестве решения проблемы попробуйте установить оригинальный кейт, удалить его и поставить мод. <br> Такая "магия" срабатывала у некоторых форумчан 4pda</p></div>
                             </li>
                             <li>
-                                <div class="collapsible-header"><i class="ion-android-more-vertical"></i>Третий вопрос</div>
-                                <div class="collapsible-body"><p>Опа, к нам оказывается нет больше вопросов</p></div>
-                            </li>
-                            <li>
-                                <div class="collapsible-header"><i class="ion-android-more-vertical"></i>Четвертый вопрос</div>
-                                <div class="collapsible-body"><p>Опа, к нам оказывается нет больше вопросов</p></div>
+                                <div class="collapsible-header"><i class="ion-android-more-vertical"></i>%problem title%</div>
+                                <div class="collapsible-body"><p>Пока что не обнаружено больше критических проблем. Некоторые проблемы присутствовали в прошлых версиях мода и уже решены в новых <br> Если вы обнаружили какую-то ошибку, то сообщите о проблеме по адресу ad@xakep.pw</p></div>
                             </li>
                         </ul>
                     </div><!-- Col ends -->
