--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Скачать</a>
 							<ul id='dropdown1' class='dropdown-content'>
 								<li><a href="https://www.dropbox.com/s/msf1ayrob247boj/Kate%20MoDile%205.1.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 5.1. Оригинал 40', 3000, 'rounded')">Kate 5.1(40)</a></li>
-								<li><a href="https://www.dropbox.com/s/i0bef7evroep4mk/new_404_signed.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 7.3. Оригинал 40.4', 3000, 'rounded')">Kate 7.3(40.4)</a></li>
+								<li><a href="https://www.dropbox.com/s/x5jlt006vhe000g/Kate%20MoDile%207.4.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 7.4. Оригинал 40.4', 3000, 'rounded')">Kate 7.4(40.4)</a></li>
 							</ul>
                             <a href="index.html#fichi" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
                         </div>
