--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                         <div class="download-button scroll-to">
                             <!-- Replace 'href' attribute with the download link  -->
 				<!--dropdown-button btn -->
-							<a class='waves-effect waves-light btn' href='#' data-activates='dropdown1'>Скачать</a>
+				<!-- data-activates='dropdown1 -->
+							<a class='waves-effect waves-light btn' href='#'>Скачать</a>
 				<div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
       <h4>Modal Header</h4>
