--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
                             <!-- Replace 'href' attribute with the download link  -->
 				<!--dropdown-button btn -->
 				<!-- data-activates='dropdown1 -->
+							 <!-- Modal Trigger -->
+  <a class="modal-trigger waves-effect waves-light btn" href="#modal1">Modal</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+    </div>
+  </div>
 							<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Скачать</a>
 							<ul id='dropdown1' class='dropdown-content'>
 								<li><a href="https://www.dropbox.com/s/msf1ayrob247boj/Kate%20MoDile%205.1.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 5.1. Оригинал 40', 3000, 'rounded')">Kate 5.1(40)</a></li>
