--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                     <div class="col s12 m7 l7 hero-text">
                         <h1 class="white-text">Kate MoDile, вжух</h1>
                         <h2 class="white-text">и <span class="type"></span></h2>
-                        <p class="white-text">Kate MoDile - это лучший неофициальный мод неофициального клиента для ВК.
-						Теперь вам доступна вся музыка, её кэш и идентификатор официального Android приложения</p>
+                        <p class="white-text">О проблеме Flood Control известно и ведется работа</p>
                         <div class="download-button scroll-to">
                             <!-- Replace 'href' attribute with the download link  -->
 				<!--dropdown-button btn -->
