--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
+<head>
 	<meta http-equiv="refresh" content="1;URL=https://vk.com/kate_mobile_pro_mod" />
+	</head>	
+    <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
