--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="progress">
                     <div class="indeterminate"></div>
                 </div>
-                <h5>Decompiling</h5>
+                <h5>Sleeping</h5>
             </div>
         </div><!-- Preloader ends -->
 
@@ -80,17 +80,10 @@
                 <div class="row btm-mrgn-0">
                     <div class="col s12 m7 l7 hero-text">
                         <h1 class="white-text">Kate MoDile, вжух</h1>
-                        <h2 class="white-text">и <span class="type"></span></h2>
-                        <p class="white-text">О проблеме Flood Control известно и ведется работа</p>
+                        <h2 class="white-text">и все наебнулось</h2>
+                        <p class="white-text">Kate MoDile заброшен. Но вы можете скачать мод на основе 42 версии</p>
                         <div class="download-button scroll-to">
-                            <!-- Replace 'href' attribute with the download link  -->
-				<!--dropdown-button btn -->
-				<!-- data-activates='dropdown1 -->
-							<a class='dropdown-button btn' href='#' data-activates='dropdown1'>Скачать</a>
-							<ul id='dropdown1' class='dropdown-content'>
-								<li><a href="https://www.dropbox.com/s/msf1ayrob247boj/Kate%20MoDile%205.1.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 5.1. Оригинал 40', 3000, 'rounded')">Kate 5.1(40)</a></li>
-								<li><a href="https://www.dropbox.com/s/x5jlt006vhe000g/Kate%20MoDile%207.4.apk?dl=1" onclick="Materialize.toast('Начинаю загрузку мода версии 7.4. Оригинал 40.4', 3000, 'rounded')">Kate 7.4(40.4)</a></li>
-							</ul>
+			    <a class='dropdown-button btn' href='https://www.dropbox.com/s/agy4n7owbvjylwa/KateMod42.apk?dl=1' data-activates='dropdown1'>Скачать</a>
                             <a href="index.html#fichi" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
                         </div>
                     </div><!-- Col ends -->
@@ -108,89 +101,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!-- Col ends -->
-                </div><!-- Row ends -->
-            </div><!-- Container ends -->
-        </section><!-- Section ends -->
-
-        <!-- Section overview -->
-        <section id="fichi" class="overview-section sec-padded-1x">
-            <div class="container">
-                <div class="row">
-                    <div class="col s12 l8 offset-l2">
-                        <div class="center-heading">
-                            <h3>Kate MoDile</h3>
-                            <span class="center-line red"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row center">
-                    <div class="col s12 m6 l3">
-                        <div class="card-panel overview-section-box wow fadeIn" data-wow-delay="0.1s">
-                            <i class="ion-music-note trans-effect"></i>
-                            <h3>Музыка</h3>
-                            <p>
-                                В моде доступна вся музыка из ВК.
-                            </p>
-                        </div>
-                    </div><!-- Col ends -->
-                    <div class="col s12 m6 l3">
-                        <div class="card-panel overview-section-box wow fadeIn" data-wow-delay="0.2s">
-                            <i class="ion-android-download trans-effect"></i>
-                            <h3>Кэш музыки</h3>
-                            <p>
-                                В моде доступен кэш музыки. Так же можно скачать музыку через ADB.
-                            </p>
-                        </div>
-                    </div><!-- Col ends -->
-                    <div class="col s12 m6 l3">
-                        <div class="card-panel overview-section-box wow fadeIn" data-wow-delay="0.3s">
-                            <i class="ion-android-list trans-effect"></i>
-                            <h3>Исходники</h3>
-                            <p>
-                                За основу взята официальная версия приложения 40.
-                            </p>
-                        </div>
-                    </div><!-- Col ends -->
-                    <div class="col s12 m6 l3">
-                        <div class="card-panel overview-section-box wow fadeIn" data-wow-delay="0.4s">
-                            <i class="ion-ios-flask trans-effect"></i>
-                            <h3>Идентификатор</h3>
-                            <p>
-                                Когда вы логинетесь в Kate MoDile, то все думают что вы зашли через официальное приложение VK Android. Именно из-за этого у вас доступна вся музыка. В скором времени мы добавим идентификатор IPhone, чтобы повысить ваше ЧСВ.
-                            </p>
-                        </div>
-                    </div><!-- Col ends -->
-                </div><!-- Row ends -->
-            </div><!-- Container ends -->
-        </section><!-- Section ends -->
-        <!-- Section faq -->
-        <section id="problems" class="faq-section sec-padded-1x z-depth-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col m5 l5 hide-on-small-only center">
-                        <img src="img/bg-screen-2.gif" alt="" class="responsive-img">
-                    </div>
-                    <div class="col s12 m7 l7">
-                        <div class="center-heading">
-                            <h3 class="white-text">Проблемы</h3>
-                            <span class="center-line red"></span>
-                            <p class="white-text">Распространенные проблемы с модом</p>
-                        </div>
-                        <ul class="collapsible z-depth-2" data-collapsible="accordion">
-                            <li>
-                                <div class="collapsible-header active"><i class="ion-android-more-vertical"></i>Проблема с музыкой или кэшем</div>
-                                <div class="collapsible-body"><p>При использовании мода вы можете обнаружить различные проблемы с музыкой и/или кэшем<br> Например у вас недоступна вся музыка, кэш от старой версии не сохранился, кэш от старой версии имеет пустые названия, невозможность сохранить в кэш и прочие <br> Такие проблемы возникают при установке мода поверх другой версии кейта или восстановлении бекапа. Рекомендуем вам удалить установленный кейт и установить мод начисто. Если проблема не решена напишите на почту ad@xakep.pw</p></div>
-                            </li>
-                            <li>
-                                <div class="collapsible-header"><i class="ion-android-more-vertical"></i>Не работают пуш уведомления</div>
-                                <div class="collapsible-body"><p>Корень данной проблема до конца не изучен, но есть версия что проблема в ID приложения авторизации. <br> В качестве решения проблемы попробуйте установить оригинальный кейт, удалить его и поставить мод. <br> Такая "магия" срабатывала у некоторых форумчан 4pda</p></div>
-                            </li>
-                            <li>
-                                <div class="collapsible-header"><i class="ion-android-more-vertical"></i>%problem title%</div>
-                                <div class="collapsible-body"><p>Пока что не обнаружено больше критических проблем. Некоторые проблемы присутствовали в прошлых версиях мода и уже решены в новых <br> Если вы обнаружили какую-то ошибку, то сообщите о проблеме по адресу ad@xakep.pw</p></div>
-                            </li>
-                        </ul>
                     </div><!-- Col ends -->
                 </div><!-- Row ends -->
             </div><!-- Container ends -->
