--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <p class="white-text">Kate MoDile заброшен. Но вы можете скачать мод на основе 42 версии</p>
                         <div class="download-button scroll-to">
 			    <a class='dropdown-button btn' href='https://www.dropbox.com/s/agy4n7owbvjylwa/KateMod42.apk?dl=1' data-activates='dropdown1'>Скачать</a>
-                            <a href="index.html#fichi" class="btn-link white-text btn-floating waves-effect waves-light red"><i class="ion-android-arrow-down"></i></a>
+                            <a href="https://vk.com/kate_mobile_pro_mod" class="btn waves-effect waves-teal">Группа</a>
                         </div>
                     </div><!-- Col ends -->
                     <div class="col s12 m5 l4 offset-l1 wow zoomIn" data-wow-delay="0.2s">
