--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                         <h2 class="white-text">и все наебнулось</h2>
                         <p class="white-text">Kate MoDile заброшен. Но вы можете скачать мод на основе 42 версии</p>
                         <div class="download-button scroll-to">
-				<a href="https://www.dropbox.com/s/agy4n7owbvjylwa/KateMod42.apk?dl=1" class="btn waves-effect waves-teal">Скачать</a>
-				<a href="https://vk.com/kate_mobile_pro_mod" class="btn waves-effect waves-red">Группа</a>
+				<a href="https://www.dropbox.com/s/agy4n7owbvjylwa/KateMod42.apk?dl=1" class="btn waves-effect waves-light">Скачать</a>
+				<a href="https://vk.com/kate_mobile_pro_mod" class="btn waves-effect waves-light">Группа</a>
                         </div>
                     </div><!-- Col ends -->
                     <div class="col s12 m5 l4 offset-l1 wow zoomIn" data-wow-delay="0.2s">
