--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col s12 m8 l8 offset-m2 offset-l2 center">
                         <!-- Replace 'src' attribute with the path to your Brand logo -->
-                        <a href="index.html"><img src="img/icons/android.png" alt=""></a>
+                        <a href="https://vk.com/kate.modile"><img src="img/icons/android.png" alt=""></a>
                         <div class="clearfix"></div>
                         <ul class="list-inline footer-social">
                             <!-- Add links to your social profiles here -->
