--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta name="application-name" content="Kate MoDile"/>
 
         <!-- Title -->
-        <title>Kate MoDile - Вся музыка и кэш</title>
+        <title>Kate Mod</title>
 	<meta name="Description" content="Мод для популярного клиента ВК с кэшем и музыкой">
 	<meta name="keywords" content="kate modile, кейт с музыкой, кейт с кэшем, мод кейт, мод kate, mod kate, gabbhack">
 
@@ -79,11 +79,11 @@
             <div class="container">
                 <div class="row btm-mrgn-0">
                     <div class="col s12 m7 l7 hero-text">
-                        <h1 class="white-text">Kate MoDile, вжух</h1>
-                        <h2 class="white-text">и все наебнулось</h2>
-                        <p class="white-text">Kate MoDile заброшен. Но вы можете скачать мод на основе 42 версии</p>
+                        <h1 class="white-text">Kate Mod</h1>
+                        <p class="white-text">Kate Mod - мод для популярного клиента Kate Mobile. В моде восстановлен кэш и доступна вся музыка, а также снят лимит на прослушивание.</p>
+			    <p class="white-text">Мод основан на 43 версии</p>
                         <div class="download-button scroll-to">
-				<a href="https://www.dropbox.com/s/agy4n7owbvjylwa/KateMod42.apk?dl=1" class="btn waves-effect waves-light">Скачать</a>
+				<a href="https://vk.cc/7cDbnD" class="btn waves-effect waves-light">Скачать</a>
 				<a href="https://vk.com/kate_mobile_pro_mod" class="btn waves-effect waves-light">Группа</a>
                         </div>
                     </div><!-- Col ends -->
