--- a/index.html
+++ b/index.html
@@ -57,16 +57,14 @@
                         <a href="index.html#" data-activates="mobile-demo" class="button-collapse"><i class="ion-android-menu"></i></a>
                         <!-- Main navigation -->
                         <ul class="right main-nav">
-                            <li><a class="waves-effect waves-light" href="index.html#fichi">Фичи</a></li>
-                            <li><a class="waves-effect waves-light" href="index.html#problems">Проблемы</a></li>
-                            <li><a class="waves-effect waves-light" href="https://vk.com/gabbhack">Разраб</a></li>
+                            <li><a class="waves-effect waves-light" href="https://gabb.xakep.pw">GabbHack</a></li>
+                            <li><a class="waves-effect waves-light" href="https://vk.com/kate_mobile_pro_mod">Группа</a></li>
                         </ul>
 
                         <!-- Mobile sidebar navigation -->
                         <ul class="side-nav" id="mobile-demo">
-                            <li><a class="waves-effect waves-light" href="index.html#fichi">Фичи</a></li>
-                            <li><a class="waves-effect waves-light" href="index.html#problems">Проблемы</a></li>
-                            <li><a class="waves-effect waves-light" href="https://vk.com/gabbhack">Разраб</a></li>
+                            <li><a class="waves-effect waves-light" href="https://gabb.xakep.pw">GabbHack</a></li>
+                            <li><a class="waves-effect waves-light" href="https://vk.com/kate_mobile_pro_mod">Группа</a></li>
                         </ul>
                     </div><!-- Nav-wrapper ends -->
                 </div><!-- Container ends -->
