--- a/index.html
+++ b/index.html
@@ -123,6 +123,35 @@
             </div><!-- Container ends -->
         </footer><!-- Footer ends -->
         <!-- Scripts -->
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter46213587 = new Ya.Metrika({
+                    id:46213587,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    webvisor:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/46213587" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
         <script src="js/jquery-1.12.3.min.js" type="text/javascript"></script>
         <script src="js/materialize.min.js" type="text/javascript"></script>
         <script src="js/jquery.smoothscroll.min.js" type="text/javascript"></script>
