Добавлена ссылка на способы

--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
                     <div class="col s12 m7 l7 hero-text">
                         <h1 class="white-text">Kate Mod</h1>
                         <p class="white-text">Kate Mod - мод для популярного клиента Kate Mobile. В моде восстановлен кэш и доступна вся музыка, а также снят лимит на прослушивание.</p>
-			    <p class="white-text">Мод основан на 43 версии</p>
+			    <p class="white-text">Мод основан на 43 версии. Для решения проблем с лицензией кликайте на "Способы"</p>
                         <div class="download-button scroll-to">
 				<a href="https://vk.cc/7cDbnD" class="btn waves-effect waves-light">Скачать</a>
-				<a href="https://vk.com/kate_mobile_pro_mod" class="btn waves-effect waves-light">Группа</a>
+				<a href="https://vk.cc/7e6yCm" class="btn waves-effect waves-light">Группа</a>
+				<a href="https://vk.cc/7e6wAL" class="btn waves-effect waves-light">Способы</a>
                         </div>
                     </div><!-- Col ends -->
                     <div class="col s12 m5 l4 offset-l1 wow zoomIn" data-wow-delay="0.2s">
