New kate version

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     <div class="col s12 m7 l7 hero-text">
                         <h1 class="white-text">Kate Mod</h1>
                         <p class="white-text">Kate Mod - мод для популярного клиента Kate Mobile. В моде восстановлен кэш и доступна вся музыка, а также снят лимит на прослушивание.</p>
-			    <p class="white-text">Мод основан на 43 версии. Для решения проблем с лицензией кликайте на "Способы"</p>
+			    <p class="white-text">Мод основан на 43.1 версии. Для решения проблем с лицензией кликайте на "Способы"</p>
                         <div class="download-button scroll-to">
-				<a href="https://vk.cc/7cDbnD" class="btn waves-effect waves-light">Скачать</a>
+				<a href="https://vk.cc/7eEotR" class="btn waves-effect waves-light">Скачать</a>
 				<a href="https://vk.cc/7e6yCm" class="btn waves-effect waves-light">Группа</a>
 				<a href="https://vk.cc/7e6wAL" class="btn waves-effect waves-light">Способы</a>
                         </div>
